# sLapH-contractions

./: .clang-format  .gitignore  .travis.yml  .vimrc  4pt___d__all_8cpp.html  4pt___d__all_8cpp_source.html  AUTHORS.md  CMakeLists.txt  Doxyfile  README.md  Readme  Readme.md  _a_u_t_h_o_r_s_8md.html  _a_u_t_h_o_r_s_8md_source.html  _cartesian_product_8hpp.html  _cartesian_product_8hpp_source.html  _correlators_8cpp.html  _correlators_8cpp_source.html  _correlators_8h.html  _correlators_8h_source.html  _correlators_8hpp.html  _correlators_8hpp_source.html  _diagram_8cpp.html  _diagram_8cpp_source.html  _diagram_8h.html  _diagram_8h_source.html  _diagram_8hpp.html  _diagram_8hpp_source.html  _diagram_forward_8h.html  _diagram_forward_8h_source.html  _diagram_forward_8hpp.html  _diagram_forward_8hpp_source.html  _diluted_factor_8cpp.html  _diluted_factor_8cpp_source.html  _diluted_factor_8h.html  _diluted_factor_8h_source.html  _diluted_factor_8hpp.html  _diluted_factor_8hpp_source.html  _diluted_factor_y_8cpp.html  _diluted_factor_y_8cpp_source.html  (+478 more)
Notes/: 2018-04-17-Note-14-59.xoj  Flops.aux  Flops.fdb_latexmk  Flops.fls  Flops.tex  Theoretical_Performance.nb  header.sty
benchmarks/: CMakeLists.txt  accumulation.cpp  create_momenta.cpp  main.cpp  omp_wtime.cpp
doc/: 2019-05-20-Note-18-18.xoj  Diagram_Unification.md  Job_Script_Generator.md
doxygen/images/: contract.eps
include/: .Correlators.h.swp  .OperatorsForMesons.h.swp  .typedefs.h.swo  .typedefs.h.swp  CartesianProduct.hpp  ComplexProduct.hpp  Correlators.h  Correlators.hpp  Diagram.h  Diagram.hpp  DiagramForward.h  DiagramForward.hpp  DiagramSpec.hpp  DilutedFactor.h  DilutedFactor.hpp  DilutedFactorFactory.hpp  DilutedFactorY.h  DilutedFactorY.hpp  DilutedProductFactory.hpp  DilutedTrace.hpp  DilutedTraceFactory.h  DilutedTraceFactory.hpp  EigenVector.h  EigenVector.hpp  Eigen_Boost_serialization.hpp  Gamma.h  Gamma.hpp  GaugeField.h  GaugeField.hpp  KahanAccumulator.hpp  Operator.h  Operators.h  OperatorsForMesons.h  OperatorsForMesons.hpp  Perambulator.h  Perambulator.hpp  QuarkLineBlock.h  QuarkLineBlock2.h  Quarklines.h  QuarklinesBlock.h  (+27 more)
include/GlobalData/: .global_data.h.swp  .global_data_typedefs.h.swp  global_data.h  global_data_typedefs.h  global_data_utils.h
infiles/: C3+.in  D4.in  KK.in  LapHs.in  contract.in  generator.ini  pipi_I1.in  pipi_I2.in  test.in  test_all.in
integration-test-L4/: run-integration-test  test_all.ini
integration-test-L4/correlators-20171113/: C2+_cnfg1000.h5  C3+_cnfg1000.h5  C4+D_cnfg1000.h5
integration-test-L4/eigensystem/: eigenvalues.1000.000  eigenvalues.1000.002  eigenvalues.1000.003  eigenvectors.1000.002  eigenvectors.1000.003
integration-test-L4/gauge/: conf.1000
integration-test-L4/light/: slurm_create_runs.sh
integration-test-L4/strange/: slurm_create_runs.sh
job-script-generator/: contract.in.j2  create_runs.sh  generate-contraction-jobs  job_script.pbs.j2  job_script.submit.j2  job_script_jureca.sh.j2  job_script_jurecabooster.sh.j2  job_script_qbig_slurm.sh.j2  kill_runs.sh  start_runs.sh  start_runs.sh.j2
main/: .I2.in.swp  .VdaggerV.cpp.swp  .contract.cpp.swo  .contract.cpp.swp  .lock-wafbuild  1  4pt_D_all  4pt_D_all.cpp  4pt_D_all.d  C4+D_cnfg714.h5  Correlators.d  D4.in  D4.out  D4_timing1.out  D4_timing2.out  EigenVector.d  I2.in  LapHs.in  Makefile  OperatorsForMesons.d  Perambulator.d  Quarklines.d  VdaggerV  VdaggerV.cpp  VdaggerV.d  VdaggerV.out  contract  contract.cpp  contract.d  contract.in  global_data.d  global_data_build_IO_names.d  global_data_input_handling.d  global_data_input_handling_utils.d  globaldata.cpp  init_lookup_tables.d  mom1.in  mom2.in  out.out  test-derivative.cpp  (+6 more)
main/.waf-1.6.1-1369902f3a1b0afb93dd6cdf3068f626/: t.bz2
main/cnfg714/C20/: test.out
modules/: .OperatorsForMesons.cpp.swn  .OperatorsForMesons.cpp.swo  .OperatorsForMesons.cpp.swp  .Perambulator.cpp.swp  .Quarklines.cpp.swp  Correlators.cpp  Diagram.cpp  DilutedFactor.cpp  DilutedTraceFactory.cpp  EigenVector.cpp  Gamma.cpp  GaugeField.cpp  Operator.cpp  OperatorFactory.cpp  Operators.h  OperatorsForMesons.cpp  OperatorsForMesons.cpp.copyover  Perambulator.cpp  QuarkLineBlock.cpp  QuarkLineBlock2.cpp  Quarklines.cpp  QuarklinesBlock.cpp  Quarklines_one_t.cpp  RandomVector.cpp  StopWatch.cpp  dilution-iterator.cpp  global_data.cpp  h5-wrapper.cpp
modules/Correlators/: .Correlators.cpp.swn  .Correlators.cpp.swo  .Correlators.cpp.swp  Correlators.cpp
modules/GlobalData/: .global_data_build_IO_names.cpp.swo  .global_data_build_IO_names.cpp.swp  .global_data_init_lookup_tables.cpp.swp  .init_lookup_tables.cpp.swn  .init_lookup_tables.cpp.swo  .init_lookup_tables.cpp.swp  global_data.cpp  global_data_build_IO_names.cpp  global_data_init_lookup_tables.cpp  global_data_init_lookup_tables_utils.cpp  global_data_input_handling.cpp  global_data_input_handling_utils.cpp  init_lookup_tables.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_d.js  classes_e.js  (+89 more)
src/: ComplexProduct.cpp  Correlators.cpp  Diagram.cpp  DiagramSpec.cpp  DilutedFactor.cpp  DilutedFactorFactory.cpp  DilutedFactorY.cpp  DilutedProductFactory.cpp  DilutedTrace.cpp  DilutedTraceFactory.cpp  EigenVector.cpp  Gamma.cpp  GaugeField.cpp  OperatorFactory.cpp  Perambulator.cpp  RandomVector.cpp  StopWatch.cpp  dilution-iterator.cpp  global_data.cpp  global_data_build_IO_names.cpp  global_data_input_handling.cpp  global_data_input_handling_utils.cpp  h5-wrapper.cpp  init_lookup_tables.cpp  io_utils.cpp  ranlxs.cpp
tests/dilution-iterator/: control.txt  run-test
tests/gtest/: CMakeLists.txt  KahanAccumulatorTest.cpp  create_momenta.cpp  gamma.cpp
utility/: ini-to-yaml  migrate-plus
(+197 files in other folders)
